--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,7 +14,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@master
+      
+    - name: Use Node.js
+      uses: actions/setup-node@v1
+      with:
+        node-version: 10.15.3
 
+    - name: Install dependencies in client app
+      working-directory: Source/Tailwind.Traders.Web/ClientApp
+      run: npm install
+      
     - name: Set up .NET Core
       uses: actions/setup-dotnet@v1
       with:
